DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/layouts/_layout.scss
+++ b/wp-content/themes/denholm/scss/layouts/_layout.scss
@@ -31,7 +31,10 @@ body {
   text-size-adjust: none;
   // background: #ccc;
   font-size: 12px;
-  overflow-x: hidden;
+  
+  @include susy-media(mobileOnly) {
+    overflow-x: hidden;
+  }
 
   &.is-show {
     overflow: hidden;
